@@ -8,14 +8,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>717</width>
-    <height>458</height>
+    <width>730</width>
+    <height>470</height>
    </rect>
   </property>
   <property name="minimumSize" >
    <size>
-    <width>643</width>
-    <height>0</height>
+    <width>660</width>
+    <height>450</height>
    </size>
   </property>
   <property name="windowTitle" >
@@ -31,18 +31,6 @@
    <layout class="QGridLayout" >
     <item row="0" column="0" colspan="2" >
      <widget class="QFrame" name="frame" >
-      <property name="minimumSize" >
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="maximumSize" >
-       <size>
-        <width>16777215</width>
-        <height>135</height>
-       </size>
-      </property>
       <property name="styleSheet" >
        <string>QFrame{background: white;}</string>
       </property>
@@ -54,16 +42,16 @@
       </property>
       <layout class="QGridLayout" >
        <property name="leftMargin" >
-        <number>2</number>
+        <number>4</number>
        </property>
        <property name="topMargin" >
-        <number>2</number>
+        <number>4</number>
        </property>
        <property name="rightMargin" >
-        <number>2</number>
+        <number>4</number>
        </property>
        <property name="bottomMargin" >
-        <number>2</number>
+        <number>4</number>
        </property>
        <item rowspan="2" row="0" column="0" >
         <widget class="QLabel" name="imgHeader" >
@@ -332,7 +320,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>130</width>
           <height>25</height>
          </size>
         </property>
@@ -363,7 +351,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
@@ -398,7 +386,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
@@ -418,6 +406,12 @@
         <property name="enabled" >
          <bool>false</bool>
         </property>
+        <property name="minimumSize" >
+         <size>
+          <width>0</width>
+          <height>25</height>
+         </size>
+        </property>
         <property name="text" >
          <string>Pause Download</string>
         </property>
@@ -430,7 +424,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
@@ -465,7 +459,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
@@ -487,7 +481,7 @@
         </property>
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
@@ -522,7 +516,7 @@
        <widget class="QPushButton" name="btnMoreOptions" >
         <property name="minimumSize" >
          <size>
-          <width>115</width>
+          <width>0</width>
           <height>25</height>
          </size>
         </property>
