@@ -31,6 +31,8 @@
     - LiveLeak
 
 - Changed licence to GNU GPL v3 (http://www.gnu.org/licenses/gpl.html)
+- Changed main window size
+- Changed Information window size
 
 - Fixed bug (Error: Disabling the automatic updates, the downloads were not started) 
 - Fixed bug (Error: On restore session, the missing videos where not deleted from list)
